Activities + box-shadows + gaps fixes

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 body {
     display: flex;
     justify-content: center;
-    margin-top: 0px;
+    margin-top: 0px;    
 }
 
 .main-container {
@@ -131,21 +131,30 @@ nav li:hover:before {
 /****** Title And Search ***********/
 
 .title-and-search{
-    margin: 25px 0px;
+    margin: 35px 0px;
 }
 
 .title{
-    margin: 30px 0px;
+    display: flex;
+    flex-direction: column;
+    margin: 35px 0px;
+    gap: 8px;
 }
 
 .title h2{
     font-weight: 700;
     font-size: 22px;
+    margin: 0;
 }
 
 .title p{
     font-weight: 400;
     font-size: 16px;
+    margin: 0;
+}
+
+.search-bar{
+    margin: 35px 0px;
 }
 
 .search-bar ul{
@@ -214,7 +223,7 @@ nav li:hover:before {
     display: flex;
     align-items: center; 
     gap: 15px;
-    margin: 30px auto;
+    margin: 35px 0px;
 }
 
 .filters h3{
@@ -253,6 +262,7 @@ nav li:hover:before {
     align-items: center;
     height: 24px;
     gap: 10px;
+    margin: 35px 0px;
 }
 
 .icon-container{
@@ -278,6 +288,7 @@ nav li:hover:before {
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
+    margin: 35px 0px;
 }
 
 .hebergements-and-populaires section {
@@ -312,9 +323,10 @@ nav li:hover:before {
     border-radius: 20px; 
 }
 
-.hebergements-cards article{
+.hebergements-cards .card{
     padding: 0px;
     width: 243px;
+    box-shadow: 0px 3px rgba(0, 0, 0, 0.1);
 }
 
 .hebergements-cards img{   
@@ -374,6 +386,7 @@ nav li:hover:before {
 .populaires-cards .card {
     display: flex;
     margin-top: 33px;
+    box-shadow: 0px 3px rgba(0, 0, 0, 0.1);
 }
 
 .populaires-cards img {
@@ -405,8 +418,51 @@ nav li:hover:before {
     margin-bottom: 5px;
 }
 
+/****** Activities ***********/
 
+.activities{
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
 
+.activities h2{
+    margin: 0;
+}
+
+.activities-cards{
+    display: flex;    
+    border-radius: 20px;
+    gap: 30px;
+}
+
+.activities-cards .card{
+    padding: 0px;
+    height: 439px;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    box-shadow: 0px 3px rgba(0, 0, 0, 0.1);  
+}
+
+.activities-cards img{    
+    height: 380px;
+    width: 297.5px; 
+    border-radius: 20px 20px 0 0;
+}
+
+.activities-cards .card-content{
+    display: flex;    
+    border-radius: 0 0 20px 20px;
+    padding: 20px 19px;    
+}
+
+.activities-cards .card-content h3{
+    margin: 0;
+    font-weight: 700;
+    font-size: 16px;    
+}
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
